plugins {
	id 'net.fabricmc.fabric-loom-remap' version "${loom_version}"
	id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

base {
	archivesName = project.archives_base_name
}

repositories {
	maven {
		name = 'Hypixel'
		url = 'https://repo.hypixel.net/repository/Hypixel/'
	}
	maven {
		name = 'WispForest'
		url = 'https://maven.wispforest.io/'
	}
	maven {
		name = 'JitPack'
		url = 'https://jitpack.io'
	}
}

loom {
	splitEnvironmentSourceSets()

	accessWidenerPath = file("src/main/resources/waypointer.accesswidener")

	mods {
		"waypointer" {
			sourceSet sourceSets.main
			sourceSet sourceSets.client
		}
	}
}

dependencies {
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings loom.officialMojangMappings()
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"

	modImplementation "net.hypixel:mod-api:${project.hypixel_mod_api_version}"
	modImplementation "io.wispforest:owo-lib:${project.owo_version}"

	testImplementation platform("org.junit:junit-bom:5.10.2")
	testImplementation 'org.junit.jupiter:junit-jupiter'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

test {
	useJUnitPlatform()
	// Let developers feed local fixture paths through to tests that opt in via
	// @EnabledIfSystemProperty, without inheriting the whole Gradle JVM env.
	['coleweight.file'].each { prop ->
		if (System.getProperty(prop)) systemProperty prop, System.getProperty(prop)
	}
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": inputs.properties.version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 21
}

tasks.named("remapJar") {
	archiveVersion = "${project.version}-1.21.11"
}

java {
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
}

jar {
	inputs.property "archivesName", project.base.archivesName

	from("LICENSE") {
		rename { "${it}_${inputs.properties.archivesName}" }
	}
}

publishing {
	publications {
		create("mavenJava", MavenPublication) {
			artifactId = project.archives_base_name
			from components.java
		}
	}

	repositories {
	}
}
